src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_ximgproc_edge_drawing jyppx_ocv_ximgproc_edge_drawing;
typedef struct jyppx_ocv_ximgproc_edge_boxes jyppx_ocv_ximgproc_edge_boxes;
typedef struct jyppx_ocv_ximgproc_edge_box
{
    int x;
    int y;
    int width;
    int height;
    float score;
} jyppx_ocv_ximgproc_edge_box;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_ellipses(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    jyppx_ocv_mat* ellipses);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_count(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* ellipse_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_fill(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    double* ellipses,
    int ellipse_capacity,
    int* ellipse_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_create(
    float alpha,
    float beta,
    float eta,
    float min_score,
    int max_boxes,
    float edge_min_mag,
    float edge_merge_thr,
    float cluster_min_mag,
    float max_aspect_ratio,
    float min_box_area,
    float gamma,
    float kappa,
    jyppx_ocv_ximgproc_edge_boxes** edge_boxes);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_edge_boxes_release_handle(
    jyppx_ocv_ximgproc_edge_boxes* edge_boxes);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_count(
    jyppx_ocv_ximgproc_edge_boxes* edge_boxes,
    const jyppx_ocv_mat* edge_map,
    const jyppx_ocv_mat* orientation_map,
    int* box_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_fill(
    jyppx_ocv_ximgproc_edge_boxes* edge_boxes,
    const jyppx_ocv_mat* edge_map,
    const jyppx_ocv_mat* orientation_map,
    jyppx_ocv_ximgproc_edge_box* boxes,
    int box_capacity,
    int* box_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_alpha(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_alpha(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_beta(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_beta(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_eta(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_eta(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_min_score(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_min_score(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_max_boxes(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_max_boxes(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_edge_min_mag(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_edge_min_mag(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_edge_merge_thr(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_edge_merge_thr(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_cluster_min_mag(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_cluster_min_mag(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_max_aspect_ratio(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_max_aspect_ratio(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_min_box_area(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_min_box_area(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_gamma(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_gamma(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_get_kappa(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_boxes_set_kappa(jyppx_ocv_ximgproc_edge_boxes* edge_boxes, float value);