src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses")]
        internal static partial int XImgProcEdgeDrawingDetectEllipses(IntPtr detector, IntPtr ellipses);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_count")]
        internal static partial int XImgProcEdgeDrawingDetectEllipsesCount(IntPtr detector, out int ellipseCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_fill")]
        internal static partial int XImgProcEdgeDrawingDetectEllipsesFill(IntPtr detector, double[] ellipses, int ellipseCapacity, out int ellipseCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_create")]
        internal static partial int XImgProcEdgeBoxesCreate(float alpha, float beta, float eta, float minScore, int maxBoxes, float edgeMinMag, float edgeMergeThr, float clusterMinMag, float maxAspectRatio, float minBoxArea, float gamma, float kappa, out IntPtr edgeBoxes);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_release_handle")]
        internal static partial void XImgProcEdgeBoxesReleaseHandle(IntPtr edgeBoxes);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_count")]
        internal static partial int XImgProcEdgeBoxesGetBoundingBoxesCount(IntPtr edgeBoxes, IntPtr edgeMap, IntPtr orientationMap, out int boxCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_fill")]
        internal static partial int XImgProcEdgeBoxesGetBoundingBoxesFill(IntPtr edgeBoxes, IntPtr edgeMap, IntPtr orientationMap, XImgProcEdgeBoxNative[] boxes, int boxCapacity, out int boxCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_alpha")]
        internal static partial int XImgProcEdgeBoxesGetAlpha(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_alpha")]
        internal static partial int XImgProcEdgeBoxesSetAlpha(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_beta")]
        internal static partial int XImgProcEdgeBoxesGetBeta(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_beta")]
        internal static partial int XImgProcEdgeBoxesSetBeta(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_eta")]
        internal static partial int XImgProcEdgeBoxesGetEta(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_eta")]
        internal static partial int XImgProcEdgeBoxesSetEta(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_min_score")]
        internal static partial int XImgProcEdgeBoxesGetMinScore(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_min_score")]
        internal static partial int XImgProcEdgeBoxesSetMinScore(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_max_boxes")]
        internal static partial int XImgProcEdgeBoxesGetMaxBoxes(IntPtr edgeBoxes, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_max_boxes")]
        internal static partial int XImgProcEdgeBoxesSetMaxBoxes(IntPtr edgeBoxes, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_edge_min_mag")]
        internal static partial int XImgProcEdgeBoxesGetEdgeMinMag(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_edge_min_mag")]
        internal static partial int XImgProcEdgeBoxesSetEdgeMinMag(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_edge_merge_thr")]
        internal static partial int XImgProcEdgeBoxesGetEdgeMergeThr(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_edge_merge_thr")]
        internal static partial int XImgProcEdgeBoxesSetEdgeMergeThr(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_cluster_min_mag")]
        internal static partial int XImgProcEdgeBoxesGetClusterMinMag(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_cluster_min_mag")]
        internal static partial int XImgProcEdgeBoxesSetClusterMinMag(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_max_aspect_ratio")]
        internal static partial int XImgProcEdgeBoxesGetMaxAspectRatio(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_max_aspect_ratio")]
        internal static partial int XImgProcEdgeBoxesSetMaxAspectRatio(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_min_box_area")]
        internal static partial int XImgProcEdgeBoxesGetMinBoxArea(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_min_box_area")]
        internal static partial int XImgProcEdgeBoxesSetMinBoxArea(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_gamma")]
        internal static partial int XImgProcEdgeBoxesGetGamma(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_gamma")]
        internal static partial int XImgProcEdgeBoxesSetGamma(IntPtr edgeBoxes, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_kappa")]
        internal static partial int XImgProcEdgeBoxesGetKappa(IntPtr edgeBoxes, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_kappa")]
        internal static partial int XImgProcEdgeBoxesSetKappa(IntPtr edgeBoxes, float value);
    }
}
#endif

